--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -28,7 +28,8 @@ border-color: #adb5bd;
 }
 
 .profit{
-    width: 27rem;
+    margin-top: 1rem;
+    width: 25rem;
     height: 20.5rem;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 5px 0 rgba(0, 0, 0, 0.19);
