--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -30,7 +30,7 @@ border-color: #adb5bd;
 .profit{
     margin-top: 1rem;
     width: 25rem;
-    height: 20.5rem;
+    height: 21.5rem;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 5px 0 rgba(0, 0, 0, 0.19);
     border-radius: 0.6rem;
@@ -50,6 +50,9 @@ border-color: #adb5bd;
 @media only screen and (min-width: 768px) {
     /* For desktop: */
 
+    .profit{
+        margin-top: 0rem; 
+    }
     .bg{
         border-radius: 0.6rem;
         background-color: white;
